# My_Vessel

./: .env.example  .gitignore  README.md  engine_loader.py  pyproject.toml  requirements.txt  setup.cfg  test.py
app/: streamlit_app.py
cli/: bathy_route.py
controllers/: feedback_linearization.py
data/: engine_data copy.yaml  engine_data.yaml  engine_data_main.yaml  engine_data_viking_star.yaml
energy/: __init__.py  power_model.py  vessel_energy_system.py
energy/opt_control/: __init__.py  dispatch_optimizer.py
environment/: __init__.py  map_generator.py  map_utils.py
examples/: a_star_example.py  dispatch_optimizer_example.py  engine_test_example.py  env_map_example.py  path_dispatch_example.py  power_model_example.py  sfoc_plotter.py  vessel_step_example.py
models/: planing_hull.py
my_vessel/: __init__.py  config.py
my_vessel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
my_vessel/bathy/: __init__.py  fetch.py  grid.py  overlay.py
my_vessel/energy/: __init__.py
my_vessel/environment/: __init__.py  env_sources.py
my_vessel/path_planner/: __init__.py  a_star_planner.py  utils.py
notebooks/: README.md  a_star_demo.ipynb  nb1.ipynb
path_planner/: __init__.py  a_star_planner.py  base_planner.py  dubins_planner.py  utils.py
tests/: test_astar_planner.py  test_bathy_grid.py  test_densify_path.py  test_dispatch_optimizer.py  test_energy_import.py  test_latlon_indexing.py  test_map_generator.py  test_map_utils.py  test_power_model.py  test_route_snapping.py  test_smooth_path.py
utils/: paths.py  plotting.py
(+5 files in other folders)
